Regroups RUN commands. Remove /update volume. Add ENV defaults. Refs #10985